# Springtrap

./: Cargo.toml  README.md
src/: lib.rs
src/common/: common_func.rs  extern_c.rs  getter_funcs.rs  globals.rs  hooks.rs  mod.rs  module_init.rs  springtrap_func.rs  springtrap_var.rs  structs.rs
src/springtrap/: mod.rs  opff.rs  vtable.rs
src/springtrap/acmd/: aerials.rs  grounded.rs  mod.rs  smashes.rs  throws.rs  tilts.rs
src/springtrap/acmd/other/: appeal_hi.rs  appeal_lw.rs  appeal_s.rs  cliff_attack.rs  entry.rs  lose.rs  mod.rs  walk_fast.rs  walk_middle.rs  walk_slow.rs  win_1.rs  win_2.rs  win_3.rs
src/springtrap/acmd/specials/: axe_bb_idle.rs  axe_chica_attack.rs  axe_chica_fall.rs  axe_chica_turn.rs  axe_chica_walk.rs  axe_fly.rs  axe_foxy_attack.rs  (+23 more)
src/springtrap/status/: attack_s4.rs  attack_s4_hold.rs  attack_s4_start.rs  axe_bb_fall.rs  axe_bb_idle.rs  axe_chica_attack.rs  axe_chica_fall.rs  axe_chica_turn.rs  axe_chica_walk.rs  axe_fly.rs  axe_foxy_attack.rs  axe_freddy_attack.rs  axe_freddy_fall.rs  axe_freddy_turn.rs  axe_freddy_walk.rs  axe_hit_stick.rs  axe_phantom_break.rs  axe_phantom_explode.rs  axe_phantom_summon.rs  axe_recall.rs  axe_stick.rs  mod.rs  special_hi.rs  special_hi_end.rs  special_hi_move.rs  special_lw.rs  special_n.rs  special_n_charge_loop.rs  special_n_high_fire.rs  special_n_low_fire.rs  special_n_recall_end.rs  special_n_recall_loop.rs  special_n_recall_start.rs  special_s.rs  special_s_attack.rs  special_s_hold.rs
src/springtrap/vtable/: common.rs  mod.rs  springtrap.rs  springtrap_axe.rs  springtrap_phantom.rs
(+58 files in other folders)
