[package]
name = "springtrap"
version = "0.9.0"
authors = ["phazoganon"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
hash40 = "1.3"
once_cell = "1.15.0"
param_config = { git = "https://github.com/csharpm7/lib_paramconfig.git"}
parking_lot = "0.11.2"
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", features = ["weak_l2cvalue"] }
smash-bgm-property = "1.2.0"
smash_script = { git = "https://github.com/WuBoytH/smash-script.git", branch = "development" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash2 = { package = "smash", git = "https://github.com/WuBoytH/smash-rs" }
the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true